DEW2020: put a note at the end of about section that both workshops are going to run a joint program across the two days including link to REAIS; added a tentative program; added speaker info (pending some additions)

--- a/dew2020/css/main.css
+++ b/dew2020/css/main.css
@@ -306,3 +306,10 @@ img::-moz-selection {
 
 body {
   -webkit-tap-highlight-color: #222; }
+
+.table thead {
+  background: #fff;
+  color: #F05F40; }
+
+.table-striped > tbody > tr:nth-of-type(odd) {
+  background-color: #f56e51; }
